# otterbrix

./: CMakeLists.txt  conanfile.py  operator_index_nested_loop_join.hpp
components/explain/: exlain.hpp  explain.cpp
components/expressions/: expression.cpp  expression_arithmetic.cpp  expression_arithmetic.hpp
components/logical_plan/: CMakeLists.txt  forward.hpp  node.cpp  node.hpp  node_join.cpp
components/optimizer/: CMakeLists.txt  optimizer.cpp  optimizer.hpp
components/optimizer/cost/: estimator.cpp  estimator.hpp  join_strategy.cpp  join_strategy.hpp  table_cost_model.cpp  table_cost_model.hpp
components/optimizer/rules/: collect_used_expressions.cpp  collect_used_expressions.hpp  constant_folding.cpp  constant_folding.hpp  filter_pushdown.cpp  filter_pushdown.hpp  join_reorder.cpp  join_reorder.hpp  limit_pushdown.cpp  limit_pushdown.hpp  predicate_simplification.cpp  predicate_simplification.hpp  projection_pruning.cpp  projection_pruning.hpp  rule.hpp  rule_set.cpp  rule_set.hpp
components/optimizer/utils/: memo.hpp
components/physical_plan/: CMakeLists.txt
components/physical_plan/collection/operators/: operator_grace_hash_join.cpp  operator_grace_hash_join.hpp  operator_index_nested_loop_join.cpp  operator_index_nested_loop_join.hpp  operator_merge_join.cpp  operator_merge_join.hpp
components/physical_plan/tests/: CMakeLists.txt
components/physical_plan_generator/impl/: create_plan_data.cpp  create_plan_join.cpp
components/planner/: planner.cpp
components/statistics/: abstract_statistics.hpp  attach_statistics.cpp  attach_statistics.hpp  collector.cpp  collector.hpp  estimator.cpp  estimator.hpp  statistics.cpp  statistics.hpp
components/table/: data_table.cpp  data_table.hpp
components/tests/: CMakeLists.txt  test_optimizer.cpp
components/tests/optimizer/: CMakeLists.txt  join_reordering_greedy.cpp  test_cbo_suilte.cpp  test_composite_deep_plans.cpp  test_composite_plan.cpp  test_constant_folding.cpp  test_estimator.cpp  test_filter_pushdown.cpp  test_grace_hash_exec.cpp  test_index_nested_loop_exec.cpp  test_join_reordering.cpp  test_join_strategy.cpp  test_limit_pushdown.cpp  test_memoization.cpp  test_merge_join_exec.cpp  test_optimizer.cpp  test_predicate_simplification.cpp  test_projection_pruning.cpp  test_rules.cpp  test_statistics.cpp
components/types/: CMakeLists.txt  literal.cpp  literal.hpp
